--- a/gmail 2.html
+++ b/gmail 2.html
@@ -9,6 +9,6 @@
       <li><a href="#">sent</a></li>
 	   <li><a href="#">starred</a></li>
 	   <li><a href="#">important</a></li>
-       <li><a href="#">Trash</a></li>
+       <li><a href="#">Delete</a></li>
 </html>	  
 </body> 
